add link footer next-step and add mobile screenshot

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <title>
       GitHub Pages | Websites for you and your projects, hosted directly from
@@ -53,7 +53,7 @@
               <p class="details">If the first part of the repository doesn’t exactly match your <em>username</em>, it won’t work, so make sure to get it right.</p>
             </div>
             <div class="img-box">
-              <img src="assets/repo.png" alt="Create Repo"/>
+              <img src="./assets/repo.png" alt="Create Repo"/>
             </div>
           </div>
 
@@ -92,30 +92,38 @@
 
           <div class="step">
               <h4>6. You're done!</h2>
-              <p>Fire up a browser and go to <a href="https://username.github.io">https://username.github.io</a></p>
-              <img src="/assets/check.svg" alt="checklist" width="100px" class="check">
+              <p>Fire up a browser and go to <b>https://username.github.io</b></p>
+              <img src="./assets/check.svg" alt="checklist" width="100px" class="check">
             </div>
       </section>
     </main>
-    <section class="next-steps">
+    <footer class="next-steps">
       <h2>Now that you're up and running, here are a few things you should know</h2>
       <div class="info-boxes">
           <div class="info">
-              <img src="/assets/pencil.svg" alt="" width="60px">
-              <h4>Blogging with Jekyll</h4>
-              <p>Using Jekyll, you can blog using beautiful Markdown syntax, and without having to deal with any databases. Learn how to set up Jekyll.</p>
+              <img src="./assets/pencil.svg" alt="pencil">
+              <a href="https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/about-github-pages-and-jekyll">
+                <h4>Blogging with Jekyll</h4>
+              </a>
+              <p>Using Jekyll, you can blog using beautiful Markdown syntax, and without having to deal with any databases. <a href="https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/about-github-pages-and-jekyll"> Learn how to set up Jekyll.</a></p>
           </div>
           <div class="info">
-              <img src="/assets/link.svg" alt="" width="60px" >
-              <h4>Custom URLs</h4>
-              <p>Want to use your own custom domain for a GitHub Pages site? Just create a file named CNAME and include your URL. Read more.</p>
+              <img src="./assets/link.svg" alt="link">
+              <a href="https://docs.github.com/en/pages/configuring-a-custom-domain-for-your-github-pages-site">
+                <h4>Custom URLs</h4>
+              </a>
+              <p>Want to use your own custom domain for a GitHub Pages site? Just create a file named CNAME and include your URL. <a href="https://docs.github.com/en/pages/configuring-a-custom-domain-for-your-github-pages-site">
+                read more.</a></p>
           </div>
           <div class="info">
-              <img src="/assets/book.svg" alt="" width="60px">
-              <h4>Guides</h4>
-              <p>Learn how to create custom 404 pages, use submodules, and learn more about GitHub Pages.</p>
+              <img src="./assets/book.svg" alt="book">
+              <a href="https://docs.github.com/en/pages">
+                <h4>Guides</h4>
+              </a>
+              <p>Learn how to create custom 404 pages, use submodules, and <a href="https://docs.github.com/en/pages">
+                learn more about GitHub Pages.</a></p>
           </div>
       </div>
-  </section>
+  </footer>
   </body>
 </html>
